# waves-on-cuda

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md
res/: CMakeLists.txt  shader.frag  shader.vert
scripts/: CMakeLists.txt  codegen.py  lookup_tables.py  make_initial_conditions.py  plot_triangles.py  rotations.py  structures.py
scripts/marching_cubes/: Makefile  cache.cpp.jinja  pyproject.toml
scripts/marching_cubes/html/: index.html
scripts/marching_cubes/src/: codegen.py  lookup_tables.py  plot_triangles.py  rotations.py  structures.py  type_hints.py
scripts/vof/: Volume of Fluid.ipynb  plot_volumes.py
src/: ArrayView.hpp  CMakeLists.txt  advection_scheme.cu  advection_scheme.hpp  grid.cu  grid.hpp  main.cpp  my_glfw.cpp  my_glfw.hpp  npz_loader.cpp  npz_loader.hpp  scheme.hpp  timing.hpp  viewer.hpp
src/cube_utils/: permute.hpp
src/marching_cubes/: CMakeLists.txt  marching_cubes.cpp  marching_cubes.hpp  renderer.hpp  viewer.cpp
src/marching_cubes/wrappers/: dvega.cpp  lcustodio.cpp
src/vof/: CMakeLists.txt  intersect.hpp  vof.cpp  vof.hpp
tests/: CMakeLists.txt  test_grid.cpp  test_vof.cpp  test_vof.py  vof_bindings.cpp
