[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "marching_cubes"
version = "0.1.0"
description = "Interactive Marching Cubes visualization in Matplotlib"
authors = [{ name="Pierre Ballif", email="pierre@ballif.eu" }]
license = "MIT"
requires-python = ">=3.8"

dependencies = [
    "matplotlib",
    "numpy",
    "scipy",
]

[tool.setuptools]
packages = ["src"]
